[package]
name = "fracking-toaster"
version = "0.1.0"
authors = ["Oscar <osmithsi@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yoloxide = "0.2.0"

regex = "1.1.9"

serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

[dependencies.serenity]
version = "0.6.2"
default-features = true