[package]
name = "toaster-commands"
version = "0.1.0"
authors = ["Oscar <osmithsi@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
toaster-core = { path = "../toaster-core" }

serenity = { version = "0.6.2", default-features = true }
threadpool = "1.7.1"

serenity_group_name = "0.1.0"

yoloxide = "0.3.1"
regex = "1.1.9"

# serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

lazy_static = "1.3.0"

libloading = "0.5.2"
# dynamic_reload = "0.3.0"