[package]
name = "toaster-commands"
version = "0.1.0"
authors = ["Matrixmage <osmithsi@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
toaster-core = { path = "../toaster-core" }

# serenity = { path = "../../serenity", default-features = true }
serenity = { version = "0.7.0", default-features = true }
threadpool = "1.7.1"

serenity_group_name = "0.1.0"

yoloxide = "0.*.0"
cylon_ast = "0.*.0"

regex = "1.1.9"

serde_json = "1.0.40"

lazy_static = "1.3.0"