[package]
name = "toaster-core"
version = "0.1.0"
authors = ["Oscar <osmithsi@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { path = "../../serenity", default-features = true }
# serenity = { version = "0.6.2", default-features = true }
threadpool = "1.7.1"

serenity_group_name = "0.1.0"

# yoloxide = "^0.3.0"
# regex = "1.1.9"

serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

# lazy_static = "1.3.0"
parking_lot = { version = "0.9.0", features = ["nightly"] }

libloading = "0.5.2"
