[package]
name = "toaster-core"
version = "0.1.0"
authors = ["Matrixmage <osmithsi@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
# serenity = { path = "../../serenity", default-features = true }
serenity = { version = "0.7.0", default-features = true }
threadpool = "1.7.1"

serenity_group_name = "0.1.0"

serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

parking_lot = { version = "0.9.0", features = ["nightly"] }

libloading = "0.5.2"

lazy_static = "1.3.0"

unsafe-any = "0.4.2"
typemap = "0.3.3"